--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 # Disable Whitelabel Error Page
 server.error.whitelabel.enabled=false
 
-
+#for delete and put methods in html
+spring.webflux.hiddenmethod.filter.enabled=true
+spring.mvc.hiddenmethod.filter.enabled=true
